--- a/src/_includes/partials/header-old.njk
+++ b/src/_includes/partials/header-old.njk
@@ -1,40 +1,24 @@
+{% set audience = audienceOverride or menu.audience %}
+
 <header class="relative z-40 grid bg-white isolate grid-cols-layout shadow-border" >
 
   <div class="relative z-10 grid justify-center bg-gray-100 xs:hidden col-full">
     <button class="flex items-center justify-center gap-2 px-4 py-2 focus:outline-none focus-visible:text-white focus-visible:bg-blue-500" x-on:click="audienceDropdownOpen = !audienceDropdownOpen">
       {%- if ('samarbeidspartner' in page.fileSlug) -%}
-      <span>{{ menu.audience[2] }}</span>
+      <span>{{ menu.audience[2].title }}</span>
       {%- elif ('arbeidsgiver' in page.fileSlug) -%}
-      <span>{{ menu.audience[1] }}</span>
+      <span>{{ menu.audience[1].title }}</span>
       {%- elif (not 'produktoversikt-' in page.fileSlug) -%}
-      <span>{{ menu.audience[0] }}</span>
+      <span>{{ menu.audience[0].title }}</span>
       {%- endif -%}
       {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-4 h-4') | safe }}
     </button>
     <div class="absolute px-4 mt-px -translate-x-1/2 left-1/2 top-full">
       <ul class="overflow-hidden text-gray-900 bg-white divide-y divide-gray-300 rounded shadow-xl max-w-max ring-1 ring-gray-200" role="tablist" x-show="audienceDropdownOpen" x-on:click.outside="audienceDropdownOpen = false">
-        {% for item in menu.audience %}
-
-          {% if ('samarbeidspartner' in page.fileSlug and loop.last) or ('arbeidsgiver' in page.fileSlug and loop.index === 2) or (loop.first and not ( 'produktoversikt-' in page.fileSlug)) %}
-            {% set menuBorder = 'border-blue-500' %}
-          {% else %}
-            {% set menuBorder = 'border-transparent fine:hover:border-gray-300/75 opacity-70' %}
-          {% endif %}
-
-          {% if 'produktoversikt' in page.fileSlug %}
-            {% if loop.first %}
-              {% set audienceLink = '/produktoversikt/' %}
-            {% endif %}
-            {% if loop.index === 2 %}
-              {% set audienceLink = '/produktoversikt-arbeidsgiver/' %}
-            {% endif %}
-            {% if loop.last %}
-              {% set audienceLink = '/produktoversikt-samarbeidspartner/' %}
-            {% endif %}
-          {% endif %}
+        {% for item in audience %}
           <li role="tab" aria-selected="{{ 'true' if loop.index === 1 else 'false' }}" class="grid">
-            <a href="{{ audienceLink or '#' }}" class="py-2 px-3 border-l-4 fine:hover:bg-gray-50 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 {{ menuBorder }}">
-              {{ item }}
+            <a href="{{ item.href or '#' }}" class="py-2 px-3 border-l-4 fine:hover:bg-gray-50 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 {{ 'border-blue-500' if activeRole === item.title or activeRole === '' else 'border-transparent fine:hover:border-gray-300/75 opacity-70' }}">
+              {{ item.title | safe }}
             </a>
           </li>
         {% endfor %}
@@ -53,43 +37,24 @@
     <div class="relative hidden px-4 md:px-5 md:self-stretch xs:grid" x-on:click.outside="audienceDropdownOpen = false">
       <button class="flex items-center self-center justify-center gap-4 py-2 pl-3 pr-2 border border-gray-200 rounded fine:hover:bg-deepblue-100 focus:outline-none md:hidden" x-on:click="audienceDropdownOpen = !audienceDropdownOpen">
       {%- if ('samarbeidspartner' in page.fileSlug) -%}
-      <span>{{ menu.audience[2] }}</span>
+      <span>{{ audience[2].title }}</span>
       {%- elif ('arbeidsgiver' in page.fileSlug) -%}
-      <span>{{ menu.audience[1] }}</span>
+      <span>{{ audience[1].title }}</span>
       {%- elif (not 'produktoversikt-' in page.fileSlug) -%}
-      <span>{{ menu.audience[0] }}</span>
+      <span>{{ audience[0].title }}</span>
       {%- endif -%}
         {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-4 h-4') | safe }}
       </button>
       <div class="xs:absolute md:static xs:top-full xs:left-0">
-      <ul class="justify-center overflow-hidden text-lg bg-white border border-gray-200 divide-y divide-gray-200 rounded shadow-lg md:rounded-none md:bg-transparent md:shadow-none md:border-0 md:divide-y-0 md:gap-4 md:flex" role="tablist" x-bind:class="audienceDropdownOpen ? 'grid' : 'hidden md:flex'">
-        {% for item in menu.audience %}
-
-          {% if ('samarbeidspartner' in page.fileSlug and loop.last) or ('arbeidsgiver' in page.fileSlug and loop.index === 2) or (loop.first and not ( 'produktoversikt-' in page.fileSlug)) %}
-            {% set menuBorder = 'border-blue-500' %}
-          {% else %}
-            {% set menuBorder = 'border-transparent fine:hover:border-gray-300/75 opacity-70' %}
-          {% endif %}
-
-          {% if 'produktoversikt' in page.fileSlug %}
-            {% if loop.first %}
-              {% set audienceLink = '/produktoversikt/' %}
-            {% endif %}
-            {% if loop.index === 2 %}
-              {% set audienceLink = '/produktoversikt-arbeidsgiver/' %}
-            {% endif %}
-            {% if loop.last %}
-              {% set audienceLink = '/produktoversikt-samarbeidspartner/' %}
-            {% endif %}
-          {% endif %}
-
-          <li role="tab" aria-selected="{{ 'true' if loop.index === 1 else 'false' }}" class="grid">
-            <a href="{{ audienceLink or '#' }}" class="focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 flex items-center py-2 px-3 md:px-0.5 md:pb-5 text-gray-900 border-l-4 md:border-l-0 md:border-b-4 md:pt-6 {{ menuBorder }}">
-              {{ item | replace('person', "") }}
-            </a>
-          </li>
-        {% endfor %}
-      </ul>
+        <ul class="justify-center overflow-hidden text-lg bg-white border border-gray-200 divide-y divide-gray-200 rounded shadow-lg md:rounded-none md:bg-transparent md:shadow-none md:border-0 md:divide-y-0 md:gap-4 md:flex" role="tablist" x-bind:class="audienceDropdownOpen ? 'grid' : 'hidden md:flex'">
+          {% for item in audience %}
+            <li role="tab" class="grid">
+              <a href="{{ item.href or '#' }}" class="focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 flex items-center py-2 px-3 md:px-0.5 md:pb-5 text-gray-900 border-l-4 md:border-l-0 md:border-b-4 md:pt-6 {{ 'border-blue-500' if activeRole === item.title else 'border-transparent fine:hover:border-gray-300/75 opacity-70' }}">
+                {{ item.title }} {{ item.active }}
+              </a>
+            </li>
+          {% endfor %}
+        </ul>
       </div>
     </div>
 
