Forenkle navgiasjon mellom produktoversikter

--- a/src/pages/produktoversikt/privat/privat.njk
+++ b/src/pages/produktoversikt/privat/privat.njk
@@ -1,10 +1,11 @@
 ---
-title: 'Søknad og skjema fra A til Å'
+title: 'Søknad og skjema fra A til Å (privat)'
 description: 'Pengestøtter og tjenester fra NAV for privatpersoner. Du kan søke eller filtrere etter type og område.'
 order: 4
 bodyClass: ''
 tags: ['template']
 activeRole: "Privat"
+permalink: "/produktoversikt/"
 ---
 {% extends 'base.njk' %}
 
