Sette opp produktside

--- a/src/pages/soknad/soknad.njk
+++ b/src/pages/soknad/soknad.njk
@@ -1,7 +1,7 @@
 ---
-title: 'Søknad'
+title: 'Standardoppsett for søknad'
 description: 'Grunnoppsett for søknader'
-order: 7
+order: 8
 tags: ['template']
 ---
 {% extends 'base.njk' %}
