--- a/src/pages/produkt/produkt.njk
+++ b/src/pages/produkt/produkt.njk
@@ -7,18 +7,96 @@ tags: ['template']
 ---
 {% extends 'base.njk' %}
 
+{%- from "macros/button.njk" import button -%}
+{%- from "macros/microcard.njk" import microcard -%}
+
 {% block content %}
-  <main class="">
-    <div class="grid py-8 grid-cols-layout">
-      <div class="col-feature">
-        <h1>{{ title | safe }}</h1>
+  <main class="py-8 text-lg md:py-clamp-gap px-clamp-gap">
+    <div class="max-w-screen-lg mx-auto grid sm:grid-cols-[6rem_auto] gap-x-8 items-start mb-12">
+      {{ '/src/_includes/svg/pictograms/utvidet-barnetrygd.svg' | svgContents('w-[calc(8vw+2rem)] h-auto max-w-24') | safe }}
+
+      <div class="flex flex-col gap-3 mt-4 sm:col-start-2 sm:row-start-1 sm:mt-0 ">
+        <h1 class="text-4xl font-semibold sm:text-5xl sm:leading-snug">{{ title | safe }}</h1>
+        <p class="flex items-center gap-3 text-base">
+          <span class="uppercase">Pengestøtte</span>
+          <span aria-hidden="true">|</span>
+          <span class="">Oppdatert 22. desember 2022</span>
+        </p>
       </div>
-    </div>
-    <div class="grid py-12 grid-cols-layout bg-gray-50">
-      <div class="col-feature grid grid-cols-[1fr_2fr] gap-4">
-        <div class="col-start-2 row-start-1 p-8 bg-white">Kort om</div>
-        <div class="col-start-1 p-8 bg-white">Innhold</div>
-        <div class="col-start-2 row-start-2 p-8 bg-white">Hvem kan få</div>
+
+      <div class="sm:col-start-2 grid md:grid-cols-[2.1fr_0.9fr] gap-x-16 items-start gap-4 mt-6">
+        <div class="markdown">
+          <p>Du kan få utvidet barnetrygd når du bor alene med barn under 18 år. Dette er barnetrygd for et barn mer enn du faktisk bor sammen med.</p>
+
+          <p>Du kan også få småbarnstillegg. Dette er et tillegg til utvidet barnetrygd for enslige forsørgere som har barn mellom 0 og 3 år, og som også mottar full overgangsstønad.</p>
+        </div>
+
+        <div class="w-full max-w-3xl mt-6 lg:-ml-6 md:sticky md:col-start-2 md:top-4 md:row-span-2 md:mx-0 md:max-w-none md:-mt-1.5 md:border-l md:border-gray-200">
+          <h2 class="text-xl font-semibold md:pl-6 sm:text-2xl">Innhold</h2>
+          {% set index = sections.slice(1) %}
+          <ul class="mt-1">
+            {% for item in index %}
+              <li class="py-1.5"><a class="inline-block text-gray-800 underline md:pl-6 hover:no-underline" href="#{{ item.title | slugify }}">{{ item.title }}</a></li>
+            {% endfor %}
+          </ul>
+        </div>
+
+        <div class="grid w-full max-w-3xl gap-4 md:row-start-2 md:mx-0 md:max-w-none">
+          {% for section in sections %}
+            {% if not loop.first %}
+            <div class="relative p-6 grid bg-gray-50 rounded max-w-2xl sm:p-8 sm:-ml-10 {{ 'mt-12 pt-8 sm:pt-12' if section.icon }}" id="{{ section.title | slugify }}">
+              {% if section.icon %}
+              <div class="absolute top-0 inline-grid p-4 mx-auto -translate-x-1/2 -translate-y-1/2 bg-green-200 rounded-full left-1/2 justify-self-center">
+                {{ section.icon | svgContents('w-6 h-6 sm:w-7 sm:h-7') | safe }}
+              </div>
+              {% endif %}
+
+              <h2 class="text-3xl font-semibold sm:text-4xl sm:leading-snug {{ '-mt-2' if section.icon }}">{{ section.title | safe }}</h2>
+              <a href="#" class="inline-flex items-center gap-2 mt-4 mb-8 text-base text-blue-500 hover:underline hover:text-blue-600">
+                {{ '/src/_includes/svg/icons/link.svg' | svgContents('w-4 h-4') | safe }}
+                <span>Kopier lenke</span>
+              </a>
+              <div class="markdown">
+              {% for block in section.contentBlocks %}
+                {% if block.type === 'markdown' %}
+                  <div class="markdown">
+                    {{ block.data  | markdown | safe }}
+                  </div>
+                {% endif %}
+
+                {% if block.type === 'actions' %}
+                <div class="grid gap-1.5 sm:flex">
+                  {% for item in block.data %}
+                    {{ button(
+                      {
+                        text: item.text,
+                        href: '#',
+                        variant: item.variant
+                      }
+                    ) }}
+                  {% endfor %}
+                </div>
+                {% endif %}
+
+                {% if block.type === 'microcards' %}
+                  <h4 class="text-xl font-semibold">{{ block.title | safe }}</h4>
+                  <div class="flex mt-1 flex-wrap gap-1.5">
+                  {% for item in block.data %}
+                    {{ microcard(item) }}
+                  {% endfor %}
+                </div>
+                {% endif %}
+
+                {% if block.type === 'line' %}
+                  <hr class="border-deepblue-100" />
+                {% endif %}
+
+              {% endfor %}
+              </div>
+            </div>
+            {% endif %}
+          {% endfor %}
+        </div>
       </div>
     </div>
   </main>
