--- a/src/pages/produkt/produkt.njk
+++ b/src/pages/produkt/produkt.njk
@@ -13,7 +13,7 @@ tags: ['template']
 {% block content %}
   <main class="py-8 text-lg md:py-clamp-gap px-clamp-gap">
     <div class="max-w-screen-lg mx-auto grid sm:grid-cols-[6rem_auto] gap-x-8 items-start mb-12">
-      {{ '/src/_includes/svg/pictograms/utvidet-barnetrygd.svg' | svgContents('w-[calc(8vw+2rem)] h-auto max-w-24') | safe }}
+      {{ '/src/_includes/svg/pictograms/utvidet-barnetrygd.svg' | svgContents('w-[calc(8vw+2rem)] h-auto max-w-24 md:-ml-2') | safe }}
 
       <div class="flex flex-col gap-3 mt-4 sm:col-start-2 sm:row-start-1 sm:mt-0 ">
         <h1 class="text-4xl font-semibold sm:text-5xl sm:leading-snug">{{ title | safe }}</h1>
@@ -31,7 +31,7 @@ tags: ['template']
           <p>Du kan også få småbarnstillegg. Dette er et tillegg til utvidet barnetrygd for enslige forsørgere som har barn mellom 0 og 3 år, og som også mottar full overgangsstønad.</p>
         </div>
 
-        <div class="w-full max-w-3xl mt-6 lg:-ml-6 md:sticky md:col-start-2 md:top-4 md:row-span-2 md:mx-0 md:max-w-none md:-mt-1.5 md:border-l md:border-gray-200">
+        <div class="w-full max-w-3xl mt-6 md:sticky md:col-start-2 md:top-4 md:row-span-2 md:mx-0 md:max-w-none md:-mt-1.5 md:border-l md:border-gray-200">
           <h2 class="text-xl font-semibold md:pl-6 sm:text-2xl">Innhold</h2>
           {% set index = sections.slice(1) %}
           <ul class="mt-1">
@@ -44,7 +44,7 @@ tags: ['template']
         <div class="grid w-full max-w-3xl gap-4 md:row-start-2 md:mx-0 md:max-w-none">
           {% for section in sections %}
             {% if not loop.first %}
-            <div class="relative p-6 grid bg-gray-50 rounded max-w-2xl sm:p-8 sm:-ml-10 {{ 'mt-12 pt-8 sm:pt-12' if section.icon }}" id="{{ section.title | slugify }}">
+            <div class="relative p-6 grid bg-gray-50 rounded max-w-2xl sm:p-8 sm:-mx-10 {{ 'mt-12 pt-8 sm:pt-12' if section.icon }}" id="{{ section.title | slugify }}">
               {% if section.icon %}
               <div class="absolute top-0 inline-grid p-4 mx-auto -translate-x-1/2 -translate-y-1/2 bg-green-200 rounded-full left-1/2 justify-self-center">
                 {{ section.icon | svgContents('w-6 h-6 sm:w-7 sm:h-7') | safe }}
