--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="no" class="h-full antialiased leading-normal text-gray-900 bg-white font-source-sans scroll-smooth">
+<html lang="no" class="h-full antialiased text-gray-900 bg-white font-source-sans scroll-smooth scroll-pt-8">
   <head>
     <meta charset="UTF-8" />
     <meta name="robots" content="noindex" />
@@ -91,7 +91,7 @@
     {%- endif -%}
   </head>
   <body
-    class="min-h-full overflow-y-scroll overflow-x-hidden {{ bodyClass }}"
+    class="min-h-full leading-normal overflow-x-hidden overflow-y-scroll {{ bodyClass }}"
     x-data="{
       indexOpen: false,
       audienceDropdownOpen: false,
