--- a/src/pages/produktoversikt/privat/privat.njk
+++ b/src/pages/produktoversikt/privat/privat.njk
@@ -185,7 +185,7 @@ permalink: "/produktoversikt/"
                   </button>
                 </div>
 
-                <div class="pt-6 pb-8 px-clamp-gap -mx-clamp-gap relative min-h-[30vh] markdown bg-deepblue-50 sm:mx-0 sm:-mt-2 sm:px-5 sm:rounded-b-lg mb-4" x-bind:hidden="!expanded" hidden>
+                <div class="pt-6 pb-8 px-clamp-gap -mx-clamp-gap relative min-h-[30vh] markdown bg-deepblue-50 sm:-mx-2 sm:-mt-2 sm:px-5 sm:rounded-b-lg mb-4" x-bind:hidden="!expanded" hidden>
                   <p>{{ product.data.ingress }}</p>
 
                   {{ product.content | markdown | safe }}
