Flere ikoner + noen oppstramminger

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="no" class="h-full antialiased text-gray-900 bg-white font-source-sans scroll-smooth scroll-pt-8">
+<html lang="no" class="h-full antialiased text-gray-900 bg-white font-source-sans motion-safe:scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="robots" content="noindex" />
