--- a/src/pages/produkt/produkt.njk
+++ b/src/pages/produkt/produkt.njk
@@ -11,47 +11,62 @@ tags: ['template']
 {%- from "macros/microcard.njk" import microcard -%}
 
 {% block content %}
-  <main class="py-8 text-lg md:py-clamp-gap px-clamp-gap">
-    <div class="max-w-screen-lg mx-auto grid sm:grid-cols-[6rem_auto] gap-x-8 items-start mb-12">
-      {{ '/src/_includes/svg/pictograms/utvidet-barnetrygd.svg' | svgContents('w-[calc(8vw+2rem)] h-auto max-w-24 md:-ml-2') | safe }}
+  <main class="py-8 text-lg md:py-12 px-clamp-gap">
+    <div class="relative max-w-screen-lg mx-auto grid sm:grid-cols-[6rem_auto] gap-x-8 items-start mb-12">
+      {{ '/src/_includes/svg/pictograms/utvidet-barnetrygd.svg' | svgContents('w-[calc(8vw+3rem)] h-auto max-w-24 md:-ml-2 text-green-800 absolute right-0 top-3 sm:static') | safe }}
 
-      <div class="flex flex-col gap-3 mt-4 sm:col-start-2 sm:row-start-1 sm:mt-0 ">
-        <h1 class="text-4xl font-semibold sm:text-5xl sm:leading-snug">{{ title | safe }}</h1>
-        <p class="flex items-center gap-3 text-base">
-          <span class="uppercase">Pengestøtte</span>
-          <span aria-hidden="true">|</span>
-          <span class="">Oppdatert 22. desember 2022</span>
+      <div class="sm:col-start-2 sm:row-start-1">
+        <p class="text-base tracking-wider uppercase opacity-70">Pengestøtte</p>
+        <h1 class="min-w-0 pr-24 mt-1 text-3xl font-semibold leading-tight sm:pr-0 sm:text-5xl sm:leading-tight">{{ title | safe }}</h1>
+        <p class="flex items-center gap-3 mt-5 text-base opacity-70">
+          Oppdatert 22. desember 2022
         </p>
       </div>
 
-      <div class="sm:col-start-2 grid md:grid-cols-[2.1fr_0.9fr] gap-x-16 items-start gap-4 mt-6">
+      {# Intro #}
+      <div class="sm:col-start-2 grid md:grid-cols-[2.1fr_0.9fr] gap-x-16 items-start gap-4 mt-8">
         <div class="markdown">
           <p>Du kan få utvidet barnetrygd når du bor alene med barn under 18 år. Dette er barnetrygd for et barn mer enn du faktisk bor sammen med.</p>
 
           <p>Du kan også få småbarnstillegg. Dette er et tillegg til utvidet barnetrygd for enslige forsørgere som har barn mellom 0 og 3 år, og som også mottar full overgangsstønad.</p>
         </div>
 
-        <div class="w-full max-w-3xl mt-6 md:sticky md:col-start-2 md:top-4 md:row-span-2 md:mx-0 md:max-w-none md:-mt-1.5 md:border-l md:border-gray-200">
-          <h2 class="text-xl font-semibold md:pl-6 sm:text-2xl">Innhold</h2>
+        {# Innholdsfortegnelse #}
+        <div class="w-full max-w-3xl mt-6 md:sticky md:col-start-2 md:top-4 md:row-span-2 md:mx-0 md:max-w-none md:-mt-1.5 md:pl-6 md:border-l md:border-gray-200">
+          <h2 class="text-xl font-semibold">Innhold</h2>
           {% set index = sections.slice(1) %}
-          <ul class="mt-1">
+          <ul class="pt-1 pl-5 list-square">
             {% for item in index %}
-              <li class="py-1.5"><a class="inline-block text-gray-800 underline hover:text-gray-900 md:pl-6 hover:no-underline" href="#{{ item.title | slugify }}">{{ item.title }}</a></li>
+              <li class="py-1.5 text-xl marker:text-gray-700"><a class="text-blue-500 underline decoration-gray-400 hover:text-blue-800 md:pl-0.5 hover:no-underline" href="#{{ item.title | slugify }}">{{ item.title }}</a></li>
             {% endfor %}
           </ul>
 
-          <h2 class="mt-8 text-xl font-semibold md:pl-6 sm:text-2xl">Nyttig å vite</h2>
-          <ul class="mt-1">
-            <li class="py-1.5"><a class="inline-block text-gray-800 underline hover:text-gray-900 md:pl-6 hover:no-underline" href="#">Klagerettigheter</a></li>
-            <li class="py-1.5"><a class="inline-block text-gray-800 underline hover:text-gray-900 md:pl-6 hover:no-underline" href="#">Lov om barnetrygd</a></li>
-            <li class="py-1.5"><a class="inline-block text-gray-800 underline hover:text-gray-900 md:pl-6 hover:no-underline" href="#">Pensjonsopptjening for omsorgsarbeid</a></li>
+          <h2 class="mt-8 text-xl font-semibold">Nyttig å vite</h2>
+          <ul class="pt-1 pl-5 list-square">
+            <li class="py-1.5 text-xl marker:text-gray-700"><a class="text-blue-500 underline decoration-gray-400 hover:text-blue-800 md:pl-0.5 hover:no-underline" href="#">Klagerettigheter</a></li>
+            <li class="py-1.5 text-xl marker:text-gray-700"><a class="text-blue-500 underline decoration-gray-400 hover:text-blue-800 md:pl-0.5 hover:no-underline" href="#">Lov om barnetrygd</a></li>
+            <li class="py-1.5 text-xl marker:text-gray-700"><a class="text-blue-500 underline decoration-gray-400 hover:text-blue-800 md:pl-0.5 hover:no-underline" href="#">Pensjonsopptjening for omsorgsarbeid</a></li>
           </ul>
         </div>
 
+        {# Filter + Innhold #}
         <div class="grid w-full max-w-3xl gap-4 md:row-start-2 md:mx-0 md:max-w-none">
+
+          {# Filter #}
+          <div class="px-6 py-4 mt-4 sm:px-8 sm:py-6 bg-blue-50 max-w-prose">
+            <h2 class="text-xl font-semibold">Hva er situasjonen din</h2>
+            <p>Fortell oss litt om situasjonen din, så viser vi bare den informasjonen som er relevant for deg.</p>
+
+            <button class="flex items-center justify-between w-full gap-3 px-4 py-2.5 mt-4 bg-white border-b-2 border-gray-400 md:max-w-max" type="button">
+              <span>Tilpass innholdet</span>
+              {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-4 h-4') | safe }}
+            </button>
+          </div>
+
+          {# Innhold #}
           {% for section in sections %}
             {% if not loop.first %}
-            <div class="relative p-6 grid bg-gray-50 rounded max-w-2xl sm:p-8 sm:-mx-10 {{ 'mt-12 pt-8 sm:pt-12' if section.icon }}" id="{{ section.title | slugify }}">
+            <div class="relative p-6 grid bg-gray-50 rounded max-w-prose min-w-0 sm:p-8 {{ 'mt-12 pt-8 sm:pt-12' if section.icon }}" id="{{ section.title | slugify }}">
               {% if section.icon %}
               <div class="absolute top-0 inline-grid p-4 mx-auto -translate-x-1/2 -translate-y-1/2 bg-green-200 rounded-full left-1/2 justify-self-center">
                 {{ section.icon | svgContents('w-6 h-6 sm:w-7 sm:h-7') | safe }}
