Fjerne unødvendig rolle-deklarasjon

--- a/src/_includes/partials/banner.njk
+++ b/src/_includes/partials/banner.njk
@@ -9,7 +9,7 @@
     </div>
     {# <a class="inline-flex items-center gap-3 px-5 py-3 text-white bg-blue-400 rounded" href="https://www.nav.no/">
       <span>Til nav.no</span>
-      <svg class="w-5 h-5" width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false" role="img">
+      <svg class="w-5 h-5" width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false" >
         <path d="m15 6 6 6-6 6M5 12h15" stroke="currentColor" stroke-width="2"/>
       </svg>
     </a> #}
