--- a/src/_includes/partials/breadcrumbs.njk
+++ b/src/_includes/partials/breadcrumbs.njk
@@ -6,7 +6,7 @@
           <svg viewBox="0 0 24 24" width="24" height="24"><path d="M3.5 13.5v10h6v-7h5v7h6V14m-20-1L12 1.5 23.5 13M16 2.5h3.5V6" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" fill="none" /></svg>
           <span>nav.no</span>
         </a>
-        <svg class="opacity-50" viewBox="0 0 24 24" width="24" height="24" fill="none" focusable="false" role="img" aria-hidden="true">
+        <svg class="opacity-50" viewBox="0 0 24 24" width="24" height="24" fill="none" focusable="false"  aria-hidden="true">
           <path fill-rule="evenodd" clip-rule="evenodd" d="M17 12L8.429 3 7 4.5l7.143 7.5L7 19.5 8.429 21 17 12z" fill="currentColor"></path>
         </svg>
       </li>
@@ -14,7 +14,7 @@
         <a class="underline text-blue-500" href="#">
           <span>Privatperson</span>
         </a>
-        <svg class="opacity-50" viewBox="0 0 24 24" width="24" height="24" fill="none" focusable="false" role="img" aria-hidden="true">
+        <svg class="opacity-50" viewBox="0 0 24 24" width="24" height="24" fill="none" focusable="false"  aria-hidden="true">
           <path fill-rule="evenodd" clip-rule="evenodd" d="M17 12L8.429 3 7 4.5l7.143 7.5L7 19.5 8.429 21 17 12z" fill="currentColor"></path>
         </svg>
       </li>
