--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -2,7 +2,7 @@
   <div class="col-feature">
     <div class="flex flex-col items-center py-3">
       <a class="flex items-center gap-2 text-base text-center fine:hover:underline fine:hover:text-orange-200" href="#">
-        <svg class="w-5 h-5" width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false" role="img">
+        <svg class="w-5 h-5" width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false">
           <path stroke="currentColor" stroke-width="2" d="m7 9 6-6 6 6m-6 10V4" />
         </svg>
         <span>Til toppen</span>
