--- a/src/pages/kontor/kontor.njk
+++ b/src/pages/kontor/kontor.njk
@@ -62,7 +62,7 @@ bodyClass: 'bg-white'
               </tr>
             </table>
             <div class="flex items-start gap-3 mt-7">
-              <svg class="w-6 h-6 mt-px" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false" role="img">
+              <svg class="w-6 h-6 mt-px" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false" >
                 <path d="M12 0C5.38226 0 0 5.38226 0 12C0 18.6177 5.38226 24 12 24C18.6167 24 24 18.6177 24 12C24 5.38226 18.6167 0 12 0Z" fill="#368DA8" />
                 <path d="M13.5 6.5C13.5 5.67157 12.8284 5 12 5C11.1716 5 10.5 5.67157 10.5 6.5C10.5 7.32843 11.1716 8 12 8C12.8284 8 13.5 7.32843 13.5 6.5ZM9 17V19H15V17H13V10H9V12H11V17H9Z" fill="white" />
               </svg>
