--- a/src/pages/soknad/soknad.njk
+++ b/src/pages/soknad/soknad.njk
@@ -21,7 +21,7 @@ tags: ['template']
                 <button class="absolute inset-0" x-on:click="stepperOpen = !stepperOpen">
                   <span class="sr-only">Vis seksjoner</span>
                 </button>
-                <svg class="flex-none w-6 h-6 pointer-events-none" x-bind:class="stepperOpen && 'rotate-180'" width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false" role="img">
+                <svg class="flex-none w-6 h-6 pointer-events-none" x-bind:class="stepperOpen && 'rotate-180'" width="24" height="24" viewBox="0 0 24 24" fill="none" aria-hidden="true" focusable="false" >
                   <path d="M18 9L12 15L6 9" stroke="currentColor" stroke-width="2" />
                 </svg>
               </div>
@@ -36,7 +36,7 @@ tags: ['template']
                       {% if item.state === 'complete' %}navds-stepper__step--complete{% endif %}">
                       <span class="navds-stepper__marker" aria-hidden="true">
                         {% if item.state === 'complete' %}
-                          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" focusable="false" role="img"  aria-hidden="true"><path d="M7 13L10 16L17.5 8.5" stroke="currentColor" stroke-width="2" /></svg>
+                          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" focusable="false"   aria-hidden="true"><path d="M7 13L10 16L17.5 8.5" stroke="currentColor" stroke-width="2" /></svg>
 
                         {% else %}
                           {{ loop.index }}
@@ -62,7 +62,7 @@ tags: ['template']
                     {% if item.state === 'complete' %}navds-stepper__step--complete{% endif %}">
                     <span class="navds-stepper__marker" aria-hidden="true">
                       {% if item.state === 'complete' %}
-                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" focusable="false" role="img"  aria-hidden="true"><path d="M7 13L10 16L17.5 8.5" stroke="currentColor" stroke-width="2" /></svg>
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" focusable="false"   aria-hidden="true"><path d="M7 13L10 16L17.5 8.5" stroke="currentColor" stroke-width="2" /></svg>
 
                       {% else %}
                         {{ loop.index }}
