--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -43,7 +43,7 @@
       </div>
 
       <div class="grid gap-2 mt-16">
-        <a href="#" x-trap="indexOpen" class="cursor-pointer">
+        <a href="#" class="cursor-pointer">
           {{ '/src/_includes/svg/logo.svg' | svgContents('h-6') | safe }}
           <span class="sr-only">NAV</span>
         </a>
