--- a/src/_includes/partials/contentBlocks.njk
+++ b/src/_includes/partials/contentBlocks.njk
@@ -30,7 +30,7 @@
   {% endif %}
 
   {% if block.type === 'line' %}
-    <hr class="border-deepblue-100" />
+    <div class="border-t border-deepblue-100"></div>
   {% endif %}
 
 {% endfor %}
